@@ -4305,7 +4305,7 @@ _EOF_
 			Banner_Installing
 
 
-			INSTALL_URL_ADDRESS='http://www.haproxy.org/download/1.6/src/haproxy-1.6.9.tar.gz'
+			INSTALL_URL_ADDRESS='http://www.haproxy.org/download/1.7/src/haproxy-1.7.2.tar.gz'
 			/DietPi/dietpi/func/check_connection "$INSTALL_URL_ADDRESS"
 
 			#Install
@@ -11419,17 +11419,8 @@ _EOF_
 
 					# - Vars if we need to move data.
 					local move_data_target=$user_data_location_current
-					local manual_location=1 #We need to know what is considered a custom location.
 
-					#Manual location?
-					if [ "$user_data_location_current" = "$FP_DIETPI_USERDATA_DIRECTORY" ] || #flash
-						[ "$user_data_location_current" = "$FP_DIETPI_DEDICATED_USBDRIVE" ]; then #usb drive
-
-						manual_location=0
-
-					fi
-
-					OPTION=$(whiptail --title "$WHIP_TITLE" --menu "Choose where to store your user data. User data includes software such as Owncloud data store, BitTorrent downloads etc\n\nMore information on user data in DietPi:\n - http://dietpi.com/phpbb/viewtopic.php?f=8&t=478&p=2087\n\n> DietPi-Drive Manager\nLaunch DietPi-Drive Manager to setup external drives, and, move user data to different locations." --cancel-button "Back" 20 100 3 \
+					OPTION=$(whiptail --title "$WHIP_TITLE" --menu "Choose where to store your user data. User data includes software such as Owncloud data store, BitTorrent downloads etc\n\nMore information on user data in DietPi:\n - http://dietpi.com/phpbb/viewtopic.php?f=8&t=478&p=2087\n\n> DietPi-Drive Manager\nLaunch DietPi-Drive Manager to setup external drives, and, move user data to different locations." --cancel-button "Back" 20 85 3 \
 					"Drive Manager" "Launches DietPi-Drive Manager" \
 					"List" "Select from a list of available mounts/drives, to move user data" \
 					"Custom" "Input a manual location to move user data" 3>&1 1>&2 2>&3)
