@@ -2358,8 +2358,8 @@ _EOF_
 		#-------------------------------------------------------------------------------
 		#Disable ARMbian's log2ram: https://github.com/Fourdee/DietPi/issues/781
 		systemctl disable log2ram.service
-		rm /usr/local/sbin/log2ram
-		rm /etc/systemd/system/log2ram.service
+		rm /usr/local/sbin/log2ram &> /dev/null
+		rm /etc/systemd/system/log2ram.service &> /dev/null
 		#-------------------------------------------------------------------------------
 
 	fi
