@@ -10,11 +10,12 @@ DietPi-Software | User data location: now has a list option, which allows user t
 DietPi-Software | Installing both MySQL and MariaDB at the same time, is no longer possible. This it to prevent incompatible MySQL + MariaDB installation: https://github.com/Fourdee/DietPi/issues/761
 DietPi-Software | 1st run questions have been removed. Dedicated USB drives can be setup in the 'user data' option in menu: https://github.com/Fourdee/DietPi/issues/751#issuecomment-281163299
 DietPi-Software | NextCloud: Will always install the latest sub version of v11 (eg: 11.0.1): https://github.com/Fourdee/DietPi/issues/779
+DietPi-Software | HAProxy: Now installs latest version 1.7.2. Thanks to Jerome.
 DietPi-Sync | Sync location: now has a list option, which allows user to select from all active mounts on system: https://github.com/Fourdee/DietPi/issues/751#issuecomment-281689544
 General | Odroids: Changed from http://oph.mdrjr.net/meveric to our new mirror http://fuzon.co.uk/meveric for Meverics repo.
 
 Bug fixes:
-General | ARMbian 'log2ram' is now disabled for ARMbian built images, as this will conflict with DietPi-RAMlog: https://github.com/Fourdee/DietPi/issues/781
+General | ARMbian 'log2ram' has been removed on ARMbian built images, as this will conflict with DietPi-RAMlog: https://github.com/Fourdee/DietPi/issues/781
 DietPi-Software | Resolved an issue where internet connection test would fail, due to 404 recieved from http://ftp.debian.org/debian. Many thanks to @tohjg for the fix: https://github.com/Fourdee/DietPi/issues/755#issuecomment-282203823
 DietPi-Software | Resolved an issue with NAA Daemon failing to install, due to URL links being dropped for stretch packages in Debian repo, again. These binaries are now permanently hosted on DietPi.com: https://github.com/Fourdee/DietPi/issues/754
 DietPi-Config | Sound card: Allo Cheapo, now sets the correct device index when running under optical out mode. Many thanks to Sudeep for the fix:
